fix resize on mobile

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -67,7 +67,7 @@
 .layout-splitter{
     background-color: var(--settings-background-color) !important;
     box-sizing: border-box;
-    width: 10px !important;
+    width: 15px !important;
 }
 
 .layout-splitter:hover{
@@ -77,7 +77,7 @@
 
 .splitter-layout-vertical .layout-splitter{
     width:100% !important;
-    height:10px !important;
+    height:15px !important;
 }
 
 
@@ -166,6 +166,8 @@
 #root{
     width:100%;
     height:100%;
+    overflow:hidden;
+    position: absolute;
 }
 
 .App{
@@ -220,7 +222,7 @@ button{
 
 .renderView{
     width: 100%;
-    height: 100%;
+    height: 0%;
     box-sizing: border-box;
 }
 .renderView > div {
@@ -228,7 +230,7 @@ button{
     position: absolute;;
     width: 100%;
     height: 100%;
-    background-color: transparent;
+    background-color: rgba(0,0,255,0.5);
 }
 
 
