--- a/src/components/LaunchSpace/index.css
+++ b/src/components/LaunchSpace/index.css
@@ -19,14 +19,15 @@
 
 .LaunchSpace .trackEffects{
     z-index: 3;
-    position: absolute;
+    position: fixed;
     left:0px;
     bottom:30px;
     /*right:0px;*/
-    width: 70%;
+    padding-top:10px;
+    padding-bottom: 10px;
+    width: 100%;
     top:40px;
     background-color: rgba(50,50,50, 0.75);
     display: flex;
     text-align: center;
-    overflow-x: scroll;
 }
