--- a/src/components/Track/index.css
+++ b/src/components/Track/index.css
@@ -78,7 +78,7 @@
 
 
 .Track .effects > .Effect {
-    height:200px;
+    height:160px;
 }
 
 .Track .effects > .more {
